--- a/package.json
+++ b/package.json
@@ -4,19 +4,72 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "install:hooks": "lefthook install",
+    "commit": "commit",
+    "wrangler": "wrangler",
+    "format:check:prettier": "prettier --check .",
+    "format:fix:prettier": "prettier --write .",
+    "format:check": "run-s format:check:*",
+    "format:fix": "run-s format:fix:*",
+    "lint:check:eslint": "eslint .",
+    "lint:fix:eslint": "eslint . --fix",
+    "lint:check": "astro sync && run-s --continue-on-error lint:check:*",
+    "lint:fix": "astro sync && run-s --continue-on-error lint:fix:*",
+    "declutter": "knip --no-exit-code",
     "dev": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "clean": "rimraf node_modules dist .turbo .astro",
+    "pre-commit-tasks": "turbo format:check lint:check build"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/cloudflare": "^12.1.0",
+    "@astrojs/partytown": "^2.1.2",
+    "@astrojs/sitemap": "^3.2.1",
+    "@astrojs/tailwind": "^5.1.3",
+    "@fontsource-variable/inter": "^5.1.0",
+    "@t3-oss/env-core": "^0.11.1",
+    "@tailwindcss/typography": "^0.5.15",
     "astro": "^5.0.5",
-    "typescript": "^5.7.2"
+    "astro-seo": "^0.8.4",
+    "tailwindcss": "^3.4.16",
+    "typescript": "^5.7.2",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20241205.0",
+    "@commitlint/cli": "^19.6.1",
+    "@commitlint/config-conventional": "^19.6.0",
+    "@commitlint/prompt-cli": "^19.6.1",
+    "@commitlint/types": "^19.5.0",
+    "@eslint/js": "^9.17.0",
+    "eslint": "^9.17.0",
+    "eslint-plugin-astro": "^1.3.1",
+    "globals": "^15.13.0",
+    "knip": "^5.40.0",
+    "lefthook": "^1.9.2",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1",
+    "prettier-plugin-tailwindcss": "^0.6.9",
+    "rimraf": "^6.0.1",
+    "turbo": "^2.3.3",
+    "typescript-eslint": "^8.18.0",
     "wrangler": "^3.95.0"
-  }
+  },
+  "browserslist": {
+    "production": [
+      ">0.5%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 3 chrome version",
+      "last 3 firefox version",
+      "last 5 safari version"
+    ]
+  },
+  "packageManager": "pnpm@9.12.1"
 }
