ci: add smoke test script

--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -56,14 +56,8 @@ jobs:
 
       - run: pnpm i
 
-      - name: lint check
-        run: pnpm lint:check
-
-      - name: format check
-        run: pnpm format:check
-
       - name: declutter
         run: pnpm declutter
 
-      - name: cicd tasks
-        run: pnpm turbo build type-check
+      - name: smoke test
+        run: pnpm ci:smoke-test
