--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "astro": "astro",
     "clean": "rimraf node_modules dist .turbo .astro",
     "pre-commit-tasks": "turbo format:check lint:check type-check build",
-    "ci:smoke-test": "turbo format:check lint:check type-check build"
+    "ci:smoke-test": "turbo format:check lint:check type-check"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
